--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .btn-primary:hover {
-  background-color: #3B82F6;
+  background-color: #3b82f6;
 }
 
 /* Secondary Button */
@@ -25,9 +25,8 @@
 }
 
 .btn-secondary:hover {
-  background-color: #E5E7EB;
+  background-color: #e5e7eb;
 }
-
 
 /* Spacing utilities */
 .spacing-xs {
@@ -80,4 +79,31 @@
 
 .content.shifted {
   margin-left: 250px;
+}
+
+.content-card {
+  margin: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.content-card img {
+  padding: 10px;
+  width: 15%;
+  border: lightgray solid 1px;
+  border-radius: 10px;
+}
+.content-card h4,
+h3 {
+  width: 20%;
+  height: 10vh;
+  overflow: hidden;
+}
+
+.ProductDetailsPage img {
+  width: 20%;
 }
